--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -180,8 +180,8 @@ ul.leftlinks li a:hover {
 
 /* Search Pages (mostly identical to the Collection Page) */
 #searchpage h1 {
-  color: white;
-  background-color: #3db741;
+  color: $color-black;
+  background-color: $color-link;
 }
 
 /* Product Pages */
@@ -240,7 +240,8 @@ ul#variants label {
 
 #footer #searchform #s {
   color: $color-footer;
-  background-color: #f6f6f6;
+  // background-color: #f6f6f6;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 #footer #footertxt {
