--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -110,6 +110,7 @@
         {% when 'cart' %}
           {% include 'cartrelated' %}
         {% else %}
+          {% include 'footer' %}
       {% endcase %}
     </div>
   </div>
