--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -1,3 +1,8 @@
+$cell: {{ settings.cell }};
+$cell-margin: {{ settings.cell-margin }};
+$content-min-width: 2 * $cell + 3 * $cell-margin;
+$breakpoint: {{ settings.breakpoint }};
+
 $font-size-basic: {{ settings.font-size-basic }};
 $font-leftlinks: {{ settings.font-sidebar-big }};
 $fontsize-leftlinks: {{ settings.fontsize-sidebar-big }};
@@ -9,6 +14,12 @@ $headline-font: {{ settings.headline-font }};
 $body-font: {{ settings.body-font }};
 $cart-font: {{ settings.cart-font }};
 $logo-font: {{ settings.logo-font }};
+
+$fontsize-searchform: {{ settings.fontsize-sidebar-big }} * 0.75;
+$cell-margin-half: $cell-margin * 0.5;
+$cell-margin-2x: $cell-margin * 2;
+$cell-margin-3x: $cell-margin * 3;
+$cell-margin-4x: $cell-margin * 4;
 
 
 /*eBoy SHOP-TYPOGRAPHY CSS*/
@@ -238,17 +249,23 @@ a:hover.shipinfo {
 }
 
 /* Page */
-#page .textile {
-  line-height: 1.4em;
-  font-family: $body-font;
-  font-size: 14px;
-  margin-left: 6px;
+#page {
+  .textile {
+    font-family: $body-font;
+
+    h3 {
+      font-size: 1em;
+      font-weight: 600;
+    }
+    p,
+    ul,
+    h3 {
+      padding: 0 0 $cell-margin-2x 0;
+      margin: 0;
+    }
+  }
 }
 
-#page .textile p,
-#page .textile ul {
-  margin: 0 0 1em 0;
-}
 
 #page .textile br {
   margin: 0;
@@ -283,11 +300,7 @@ a:hover.shipinfo {
   font-size: 24px;
 }
 
-#footer #searchform {
-  font-size: 24px;
-}
-
 #footer #searchform #s {
   font-family: $body-font;
-  font-size: 24px;
+  font-size: $fontsize-searchform;
 }
