--- a/assets/css-cart.scss.liquid
+++ b/assets/css-cart.scss.liquid
@@ -1,8 +1,12 @@
+$cell: {{ settings.cell }};
 $cell-margin: {{ settings.cell-margin }};
+$content-min-width: 2 * $cell + 3 * $cell-margin;
+$breakpoint: {{ settings.breakpoint }};
 
 $cell-margin-half: $cell-margin * 0.5;
 $cell-margin-2x: $cell-margin * 2;
 $cell-margin-3x: $cell-margin * 3;
+$cell-margin-4x: $cell-margin * 4;
 
 .cartbanner {
   width: calc(100% - 1rem);
