2 column layout as minimal width

--- a/assets/css-appheader.scss.liquid
+++ b/assets/css-appheader.scss.liquid
@@ -20,12 +20,13 @@ $cell-margin-4x: $cell-margin * 4;
 
   #appheadertop {
     position: relative;
-    padding: $cell-margin-2x $cell-margin-2x $cell-margin-4x $cell-margin-2x;
+    padding: $cell-margin $cell-margin-2x;
     margin: 0;
     box-sizing: border-box;
+    text-align: left;
 
     #logotype {
-      padding: 0 $cell-margin-2x 0 $cell * 0.25;
+      padding: 0;
     }
   }
 
