--- a/assets/css-layout.scss.liquid
+++ b/assets/css-layout.scss.liquid
@@ -9,12 +9,12 @@ $cell-margin-3x: $cell-margin * 3;
 $cell-margin-4x: $cell-margin * 4;
 
 // mobile
-@media only screen
-  and (max-device-width: $breakpoint) {
-  #mainbox {
-    min-width: 100%;
-  }
-}
+// @media only screen
+//   and (max-device-width: $breakpoint) {
+//   #mainbox {
+//     min-width: 100%;
+//   }
+// }
 
 #mainbox {
   display: flex;
