--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -57,6 +57,11 @@
   {{ 'script-shop.js' | asset_url | script_tag }}
   {{ 'css-debug.scss.css' | asset_url | stylesheet_tag }}
 
+  <!-- <meta name="viewport" content="width=536"> -->
+  <meta name="viewport" content="width=568">
+  <!-- <meta name="viewport" content="width=544"> -->
+  <!-- <meta name="viewport" content="width=device-width"> -->
+  <!-- <meta name="viewport" content="width=568, initial-scale=1"> -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
   <script type="text/javascript">
