--- a/assets/css-appbody.scss.liquid
+++ b/assets/css-appbody.scss.liquid
@@ -3,24 +3,35 @@ $cell-margin: {{ settings.cell-margin }};
 $content-min-width: 2 * $cell + 3 * $cell-margin;
 $breakpoint: {{ settings.breakpoint }};
 
-@media only screen
-  and (max-device-width: $breakpoint) {
-  #appbody {
-    flex-direction: column;
-  }
-}
+// @media only screen
+//   and (max-device-width: $breakpoint) {
+//   #appbody {
+//     // flex-direction: column;
+//     flex-direction: wrap;
+//   }
+// }
+//
+// @media only screen
+//   and (min-device-width: $breakpoint) {
+//   #appbody {
+//     flex-direction: wrap;
+//   }
+// }
 
-@media only screen
-  and (min-device-width: $breakpoint) {
-  #appbody {
-    flex-direction: wrap;
-  }
-}
+
 
 // Shared properties
 #appbody {
+  flex-direction: wrap;
   padding: 0;
   margin: 0;
   display: flex;
-  overflow: hidden;
+
+  // 1 column container
+  @media only screen
+    and (min-width: (1 * $cell + 2 * $cell-margin))
+    and (max-width: (2 * $cell + 3 * $cell-margin)) {
+    width: 1 * $cell + 2 * $cell-margin;
+    flex-direction: column;
+  }
 }
