3 column minimum width

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -58,8 +58,9 @@
   {{ 'css-debug.scss.css' | asset_url | stylesheet_tag }}
 
   <!-- <meta name="viewport" content="width=536"> -->
-  <meta name="viewport" content="width=568">
+  <!-- <meta name="viewport" content="width=568"> -->
   <!-- <meta name="viewport" content="width=544"> -->
+  <meta name="viewport" content="width=800">
   <!-- <meta name="viewport" content="width=device-width"> -->
   <!-- <meta name="viewport" content="width=568, initial-scale=1"> -->
 
