--- a/assets/css-appbody.scss.liquid
+++ b/assets/css-appbody.scss.liquid
@@ -27,11 +27,11 @@ $breakpoint: {{ settings.breakpoint }};
   margin: 0;
   display: flex;
 
-  // 1 column container
-  @media only screen
-    and (min-width: (1 * $cell + 2 * $cell-margin))
-    and (max-width: (2 * $cell + 3 * $cell-margin)) {
-    width: 1 * $cell + 2 * $cell-margin;
-    flex-direction: column;
-  }
+  // // 1 column container
+  // @media only screen
+  //   and (min-width: (1 * $cell + 2 * $cell-margin))
+  //   and (max-width: (2 * $cell + 3 * $cell-margin)) {
+  //   width: 1 * $cell + 2 * $cell-margin;
+  //   flex-direction: column;
+  // }
 }
