2 column mode: sidebar flips to top of window, breadcrumb disappears
and some other small edits

--- a/assets/css-appheader.scss.liquid
+++ b/assets/css-appheader.scss.liquid
@@ -20,7 +20,7 @@ $cell-margin-4x: $cell-margin * 4;
 
   #appheadertop {
     position: relative;
-    padding: $cell-margin $cell-margin-2x;
+    padding: $cell-margin $cell-margin $cell-margin-3x $cell-margin-2x;
     margin: 0;
     box-sizing: border-box;
     text-align: left;
@@ -36,7 +36,7 @@ $cell-margin-4x: $cell-margin * 4;
     padding: $cell-margin 0;
     text-align: right;
     display: table;
-    border-bottom: 1px solid $color-header-border;
+    // border-bottom: 1px solid $color-header-border;
 
     #breadcrumb {
       float: left;
