--- a/assets/css-base.scss.liquid
+++ b/assets/css-base.scss.liquid
@@ -46,15 +46,15 @@ body {
   // }
 
   // 2 column container
-  // @media only screen
-  //   // and (min-width: (2 * $cell + 3 * $cell-margin))
-  //   and (max-width: (3 * $cell + 4 * $cell-margin)) {
-  //   width: 2 * $cell + 3 * $cell-margin;
-  //   // background-color: $color-2c;
-  // }
+  @media only screen
+    // and (min-width: (2 * $cell + 3 * $cell-margin))
+    and (max-width: (3 * $cell + 4 * $cell-margin)) {
+    width: 2 * $cell + 3 * $cell-margin;
+    // background-color: $color-2c;
+  }
   // 3 column container
   @media only screen
-    // and (min-width: (3 * $cell + 4 * $cell-margin))
+    and (min-width: (3 * $cell + 4 * $cell-margin))
     and (max-width: (4 * $cell + 5 * $cell-margin)) {
     width: 3 * $cell + 4 * $cell-margin;
     // background-color: $color-3c;
