--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -30,7 +30,11 @@ a:hover {
 
 /* Header */
 
-#appheader {
+// #appheader {
+//   background-color: green;
+// }
+//
+#appheadertop {
   background-color: $color-header-top;
 }
 
@@ -57,12 +61,12 @@ a:hover {
 }
 
 ul.leftlinks li a {
-  color: $color-sidebox-link;
+  color: $color-link;
 }
 
 ul.leftlinks li a:hover {
   color: white;
-  background-color: $color-sidebox-link;
+  background-color: $color-link;
 }
 
 /* Cart Page */
