--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -57,10 +57,12 @@
   {{ 'script-shop.js' | asset_url | script_tag }}
   {{ 'css-debug.scss.css' | asset_url | stylesheet_tag }}
 
-  <!-- <meta name="viewport" content="width=536"> -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono" rel="stylesheet">
+
+  <meta name="viewport" content="width=536">
   <!-- <meta name="viewport" content="width=568"> -->
   <!-- <meta name="viewport" content="width=544"> -->
-  <meta name="viewport" content="width=800">
+  <!-- <meta name="viewport" content="width=800"> -->
   <!-- <meta name="viewport" content="width=device-width"> -->
   <!-- <meta name="viewport" content="width=568, initial-scale=1"> -->
 
