--- a/assets/css-appbody.scss.liquid
+++ b/assets/css-appbody.scss.liquid
@@ -34,4 +34,10 @@ $breakpoint: {{ settings.breakpoint }};
   //   width: 1 * $cell + 2 * $cell-margin;
   //   flex-direction: column;
   // }
+
+  @media only screen
+    // and (min-width: (2 * $cell + 3 * $cell-margin))
+    and (max-width: (3 * $cell + 4 * $cell-margin)) {
+    flex-direction: column;
+  }
 }
