--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -2,10 +2,9 @@
   <form id="searchform" method="get" action="/search">
     <input type="text" value="Search Shop" name="q" id="s" size="24" onfocus="clearMe(this)"/>
   </form>
-  <div id="footertxt">
+  <div id="footertxt" class="mdi-info">
     {% for link in linklists.footer.links %}
-      {{ link.title | link_to: link.url }} |
+      {{ link.title | link_to: link.url }}
     {% endfor %}
-    Powered by <a href="http://shopify.com" title="powered by Shopify">Shopify</a>
   </div>
 </div>
