increased products per page limit, other smaller edits
- in sidebar: 'Portfolio' instead of 'DB'
- smaller CSS fix

--- a/assets/css-layout.scss.liquid
+++ b/assets/css-layout.scss.liquid
@@ -24,8 +24,7 @@ $color-black: {{ settings.color-black }};
 /* Left Navigation */
 #sidebarleft {
   box-sizing: border-box;
-  // width: $cell;
-  padding: $cell-margin 0 $cell-margin $cell-margin;
+  padding: $cell-margin;
   overflow: hidden;
   display: flex;
 
