--- a/snippets/sidebarleft.liquid
+++ b/snippets/sidebarleft.liquid
@@ -10,7 +10,7 @@
   </ul>
   <ul class="leftlinks-other">
     <li class="exlink">
-      <a href="https://db.eboy.com/" target="_blank" class="mdi-database">DB</a>
+      <a href="https://db.eboy.com/" target="_blank" class="mdi-database">Portfolio</a>
     </li>
     <li class="exlink">
       <a href="https://twitter.com/eboyarts/" target="_blank" class="mdi-twitter">Twitter</a>
