--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -52,7 +52,7 @@
   {{ 'css-cart.scss.css'| asset_url | stylesheet_tag }}
   {{ 'css-modal.scss.css'| asset_url | stylesheet_tag }}
 
-  {{ 'css-shop-icons.css' | asset_url | stylesheet_tag }}
+  {{ 'css-icons.css' | asset_url | stylesheet_tag }}
   {{ 'lightbox/v2/lightbox.css' | global_asset_url | stylesheet_tag }}
   {{ 'lightbox/v2/lightbox.js' | global_asset_url | script_tag }}
   {{ 'script-shop.js' | asset_url | script_tag }}
