improved margins layout for single page

--- a/assets/css-layout.scss.liquid
+++ b/assets/css-layout.scss.liquid
@@ -201,8 +201,9 @@ hr {
   h1 {
     width: 100%;
     margin: 0 0 $cell-margin-3x 0;
-    padding: $cell-margin-3x;
+    padding: $cell-margin-2x $cell-margin $cell-margin-2x $cell-margin-2x;
     box-sizing: border-box;
+    border-bottom: 1px solid $color-black;
   }
 
   .textile {
