--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -123,7 +123,7 @@ ul.leftlinks li a:hover {
 
 /* Page */
 #page h1 {
-  background-color: $color-link;
+  // background-color: $color-link;
 }
 
 /* PRODUCTS */
