--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -70,7 +70,7 @@ a:hover {
 
 /* Submenublock */
 #carthead {
-  font-family: $headline-font;
+  // font-family: $headline-font;
   line-height: 1.2em;
   font-weight: 400;
 
@@ -140,7 +140,7 @@ a:hover {
   line-height: $body-lineheight;
 
   p {
-    margin: $cell-margin 0 $cell-margin 0;
+    margin: 0 0 $cell-margin-2x 0;
   }
 
   ul {
@@ -235,7 +235,7 @@ a:hover.shipinfo {
 #page {
   h1 {
     font-weight: 400;
-    line-height: 1.5rem;
+    line-height: $cell-margin-3x;
   }
 
   .textile {
@@ -244,6 +244,7 @@ a:hover.shipinfo {
     h3 {
       font-size: 1em;
       font-weight: 600;
+      font-style: italic;
     }
 
     .addressblock,
@@ -252,7 +253,7 @@ a:hover.shipinfo {
     h3 {
       padding-top: 0;
       padding-right: $cell-margin-4x;
-      padding-left:  $cell-margin-4x;
+      padding-left:  $cell-margin-2x;
       margin: 0;
     }
 
